force-app/main/default/objects/Absence__c/Absence__c.object-meta.xml
<CustomObject>
    <description>Cette table sert à récupérer les  informations sur les absences ( type d&apos;absence , motif , la durée , la date de début et de fin , la date de création et la dernière date de modification de l&apos;absence )</description>
    <label>Absence</label>
    <nameField>
        <label>Détails de l&apos;absence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Absences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>