force-app/main/default/objects/Absence__c/fields/annee__c.field-meta.xml
<CustomField>
    <fullName>annee__c</fullName>
    <description>Année de l&apos;absence</description>
    <inlineHelpText>Année de l&apos;absence</inlineHelpText>
    <label>annee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>