force-app/main/default/objects/Absence__c/fields/duree__c.field-meta.xml
<CustomField>
    <fullName>duree__c</fullName>
    <description>Durée de l&apos;absence</description>
    <inlineHelpText>Durée de l&apos;absence</inlineHelpText>
    <label>durée ( en jour(s))</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>