force-app/main/default/objects/Absence__c/fields/Employe__c.field-meta.xml
<CustomField>
    <fullName>Employe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employé lié à cette tâche</description>
    <inlineHelpText>Employé lié à cette tâche</inlineHelpText>
    <label>Employé</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Absences</relationshipName>
    <type>Lookup</type>
</CustomField>