force-app/main/default/objects/Absence__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Date de fin de l&apos;absence</description>
    <inlineHelpText>Date de fin de l&apos;absence</inlineHelpText>
    <label>Date de fin</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>