force-app/main/default/objects/Absence__c/fields/modifiedOn__c.field-meta.xml
<CustomField>
    <fullName>modifiedOn__c</fullName>
    <description>Dernière date de modification</description>
    <inlineHelpText>Dernière date de modification</inlineHelpText>
    <label>Date de modification</label>
    <type>DateTime</type>
</CustomField>