force-app/main/default/objects/Absence__c/fields/MotifAbsence__c.field-meta.xml
<CustomField>
    <fullName>MotifAbsence__c</fullName>
    <description>Le motif de l&apos;absence</description>
    <inlineHelpText>Le motif de l&apos;absence</inlineHelpText>
    <label>Motif de  l&apos;absence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Congés</fullName>
                <default>true</default>
                <label>Congés</label>
            </value>
            <value>
                <fullName>Course Administrative</fullName>
            </value>
            <value>
                <fullName>Déménagement</fullName>
            </value>
            <value>
                <fullName>Formation</fullName>
            </value>
            <value>
                <fullName>Mariage</fullName>
            </value>
            <value>
                <fullName>Naissance</fullName>
            </value>
            <value>
                <fullName>Repos maladie</fullName>
            </value>
            <value>
                <fullName>Décès</fullName>
            </value>
            <value>
                <fullName>Maladie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>