force-app/main/default/objects/Absence__c/fields/Ressource__c.field-meta.xml
<CustomField>
    <fullName>Ressource__c</fullName>
    <label>Ressource</label>
    <referenceTo>Ressource__c</referenceTo>
    <relationshipLabel>Absences</relationshipLabel>
    <relationshipName>Absences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>