force-app/main/default/objects/Absence__c/fields/Solde_Conges__c.field-meta.xml
<CustomField>
    <fullName>Solde_Conges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solde de congés</description>
    <inlineHelpText>Solde de congés</inlineHelpText>
    <label>Solde Congé</label>
    <referenceTo>Solde_Conge__c</referenceTo>
    <relationshipLabel>Absences</relationshipLabel>
    <relationshipName>Absences</relationshipName>
    <type>Lookup</type>
</CustomField>