force-app/main/default/objects/Absence__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Date de début de l&apos;absence</description>
    <inlineHelpText>Date de fin de l&apos;absence</inlineHelpText>
    <label>Date de début</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>