force-app/main/default/objects/Absence__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <description>Statu de la demande de congés</description>
    <inlineHelpText>Statu de la demande de congés</inlineHelpText>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>En attente</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Modifié</fullName>
                <color>#E27001</color>
                <label>Modifié</label>
            </value>
            <value>
                <fullName>Rejeté</fullName>
                <color>#FF0000</color>
                <label>Rejeté</label>
            </value>
            <value>
                <fullName>Validé</fullName>
                <color>#009900</color>
                <label>Validé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>