force-app/main/default/objects/Absence__c/fields/valid_by__c.field-meta.xml
<CustomField>
    <fullName>valid_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsable ayant validé</description>
    <inlineHelpText>Validé par</inlineHelpText>
    <label>Traité  par</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResponsableAbsence</relationshipName>
    <type>Lookup</type>
</CustomField>