force-app/main/default/objects/Absence__c/fields/Valid_parTodele__c.field-meta.xml
<CustomField>
    <fullName>Valid_parTodele__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>personne qui valide la demande d&apos;absence</description>
    <inlineHelpText>personne qui valide la demande d&apos;absence</inlineHelpText>
    <label>Validé par To Delete</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Absences (Validé par)</relationshipLabel>
    <relationshipName>Absences1</relationshipName>
    <type>Lookup</type>
</CustomField>