force-app/main/default/objects/Absence__c/validationRules/end_date_must_be_lower_than_start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>end_date_must_be_lower_than_start_Date</fullName>
    <active>true</active>
    <description>La date de fin ne peut pas être antérieure  à la date de début</description>
    <errorConditionFormula>StartDate__c &gt;  EndDate__c</errorConditionFormula>
    <errorMessage>La date de fin ne doit pas être supérieure à la date de début</errorMessage>
</ValidationRule>