force-app/main/default/objects/Absence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MotifAbsence__c</columns>
    <columns>annee__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>duree__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Statut__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>valid_by__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les absences</label>
</ListView>